@@ -1,3 +1,6 @@
+2011-07-01 yusei
+* Set proper title to interaction workflows.
+
 2011-06-23 yusei
 * Add an action to call alarm.activeSense() for developer.
 
